SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4251 /wd4275 /wd4193 /wd4819")


INCLUDE_DIRECTORIES("./")
INCLUDE_DIRECTORIES("charts/")
INCLUDE_DIRECTORIES("include/")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/Include/")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/MXCommon/include/")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/Share/")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/Share/cuda")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/Share/NetworkCodec")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/Share/UI")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/MXXMLWrapper/Common/include/")
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/MXXMLWrapper/UI/include/")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})


############################################################
# qt
############################################################
set(QT_QMAKE_EXECUTABLE ${QT_ROOT}/bin/qmake)
INCLUDE_DIRECTORIES(${QT_ALL_INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${QT_ALL_LIBRARY_DIRECTORIES})
add_definitions(${QT_DEFINITIONS})
FILE(GLOB QT_RUNTIME ${QT_ROOT}/bin/*.dll)
INSTALL(FILES ${QT_RUNTIME} DESTINATION .)
INSTALL(DIRECTORY ${QT_ROOT}/plugins/ DESTINATION ./plugins)

############################################################
# qhttpserver
############################################################
INCLUDE_DIRECTORIES("../thirdparty/httpserver/include/")
LINK_DIRECTORIES("../thirdparty/httpserver/lib/")

############################################################
# POPPLER-QT5
############################################################
INCLUDE_DIRECTORIES("${POPPLER_QT5}/include")
LINK_DIRECTORIES("${POPPLER_QT5}/lib")
FILE(GLOB POPPLER_RUNTIME ${POPPLER_QT5}/bin/*.dll)
INSTALL(FILES ${POPPLER_RUNTIME} DESTINATION .)
INSTALL(DIRECTORY ${POPPLER_QT5}/bin/ DESTINATION .)

############################################################
# BASS
############################################################
INCLUDE_DIRECTORIES(${BASS_INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${BASS_LIBARY_DIRECTORIES})
INSTALL(FILES ${BASS_RUNTIME_FILES} DESTINATION .)

############################################################
# Ogre
############################################################
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIRECTORIES})
LINK_DIRECTORIES(${OGRE_LIBRARY_DIRECTORIES})
FILE(GLOB OGRE_RUNTIME ${OGRE_HOME}/bin/*.dll)
INSTALL(FILES ${OGRE_RUNTIME} DESTINATION .)

FILE(GLOB Window_HEADERS "../Share/*.h" "../Share/UI/*.h" "Window/*.h")
FILE(GLOB Window_SOURCES "../Share/*.cpp" "../Share/UI/*.cpp" "Window/*.cpp")
FILE(GLOB LOGIC_HEADERS "Logic/*.h")
FILE(GLOB LOGIC_SOURCES "Logic/*.cpp")
FILE(GLOB FORMS "form/*.ui" "../Share/UI/form/*.ui")
FILE(GLOB RES "QuestionModule.rc")

QT5_WRAP_CPP(HEADERS_MOC ${Window_HEADERS} ${LOGIC_HEADERS})
QT5_WRAP_UI(FORMS_HEADERS ${FORMS}) 
SOURCE_GROUP(MxWindow FILES ${Window_HEADERS} ${Window_SOURCES})
SOURCE_GROUP(MxLogic FILES ${LOGIC_HEADERS} ${LOGIC_SOURCES})
SOURCE_GROUP(MxLogic\\cuda FILES ${SOURCES_cuda})
SOURCE_GROUP(UI FILES ${FORMS})
SOURCE_GROUP(Other\\ui_head FILES ${FORMS_HEADERS})
SOURCE_GROUP(Other\\moc_cxx FILES ${HEADERS_MOC})
SOURCE_GROUP(Other\\res FILES ${RES})

add_definitions("-DTIXML_USE_STL")
add_definitions(-DUNICODE -D_UNICODE)
INCLUDE_DIRECTORIES("Window/")
INCLUDE_DIRECTORIES("Logic/")
LINK_DIRECTORIES("${PROJECT_SOURCE_DIR}/lib/")

add_executable(QuestionModule ${Window_HEADERS} ${Window_SOURCES} ${LOGIC_HEADERS} ${LOGIC_SOURCES} ${SOURCES_cuda} ${HEADERS_MOC} ${FORMS_HEADERS} ${RES})

SET( CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /level='requireAdministrator' /uiAccess='false'" )
#SET_TARGET_PROPERTIES(QuestionModule PROPERTIES LINK_FLAGS "/SAFESEH:NO")
SET_TARGET_PROPERTIES(QuestionModule PROPERTIES WIN32_EXECUTABLE TRUE)
SET_TARGET_PROPERTIES(QuestionModule PROPERTIES LINK_FLAGS "/DEBUG")

set(PLATFORM_LINKFLAGS "/SAFESEH:NO")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${PLATFORM_LINKFLAGS}")
set(CMAKE_EXE_LINKER_FLAGS_DEBUG "${CMAKE_EXE_LINKER_FLAGS_DEBUG} ${PLATFORM_LINKFLAGS_DEBUG}")
set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${PLATFORM_LINKFLAGS}")


set(CMAKE_LINK_LIBRARY_SUFFIX "")

TARGET_LINK_LIBRARIES(QuestionModule SYCommon)
TARGET_LINK_LIBRARIES(QuestionModule ${QT_ALL_LIBARIES})


if(X64)
	TARGET_LINK_LIBRARIES(QuestionModule libgcc.a.lib)
endif(X64)